<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TravelRadioh</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="record_place">장소</string>
    <string name="record_cook">음식</string>
    <string name="record_enjoy">엔조이</string>
    <string name="record_stay">숙박</string>
    <string name="record_guitar">기타</string>
    <string name="record_heart_sort">하트순</string>
    <string name="record_review_sort">리뷰순</string>
    <string name="record_search">검색</string>
    <string name="record_search_hint">검색어를 입력하세요</string>
    <string name="menu_radio">무전</string>
    <string name="voice">무전</string>
    <string name="message">전보</string>
    <string name="following">팔로잉</string>
    <string name="member_join_ok">가입하기</string>
    <string name="member_email">e-mail</string>
    <string name="member_password">Password</string>
    <string name="member_realname">이     름</string>
    <string name="member_password_more">다     시</string>
    <string name="member_nickname">Nickname</string>
    <string name="member_login">로그인</string>
    <string name="member_join">회원가입</string>
    <string name="member_password_search">패스워드 찾기</string>
    <string name="member_location_agree">회원약관</string>
    <string name="member_join_email_hint">이메일을 입력해주세요</string>
    <string name="member_join_password_hint">비밀번호를 8자리이상으로 입력해주세요</string>
    <string name="member_join_password_more_hint">비밀번호를 다시 입력해주세요</string>
    <string name="member_join_realname_hint">실명을 입력해주세요</string>
    <string name="member_join_nickname_hint">사용할 닉네임을 입력해주세요</string>
    <string name="member_login_email_hint">이메일</string>
    <string name="member_password_check">Password check</string>
    <string name="member_name">Name</string>
    <string name="member_mylocation">나의 위치를 설정해주세요.</string>
    <string name="member_location">위치 설정</string>
    <string name="join_title">회원가입</string>
    <string name="member_modify">회원정보 수정</string>
    <string name="record_sos">S.O.S</string>
    <string name="search">검색</string>
    <string name="record_content_camera">카메라</string>
    <string name="record_content_voice">음성</string>
    <string name="record_content_link">링크</string>
    <string name="hint_content">내용을 적어주세요.</string>
    <string name="record_send">전송</string>
    <string name="heart">하트</string>
    <string name="reply">댓글</string>
    <string name="scrap">스크랩</string>
    <string name="save">저장</string>
    <string name="location">위치</string>
    <string name="login_title">LOGIN</string>
    <string name="login_user_join">회원가입</string>
    <string name="login_user_password">비밀번호를 잊어버리셨나요?</string>
    <string name="voice_reply">답장</string>
    <string name="voice_delete">삭제</string>
    <string name="voice_saved">보관</string>
    <string name="member_join_eng">JOIN</string>
    <string name="agree">동의하기</string>
    <string name="password_search">SEARCH Password</string>
    <string name="button_search_password">비밀번호 찾기</string>
    <string name="login_user_join_re">다시 회원가입하시겠습니까?</string>
    <string name="myinfo">My Information</string>
    <string name="modify">수정하기</string>
    <string name="reply_hint">댓글을 입력하세요</string>
    <string name="button_logout">로그아웃</string>
    <string name="voicebox">무전함</string>
    <string name="messagebox">전보함</string>
    <string name="unfollow">언팔로우</string>
    <string name="unblock">차단해제</string>
    <string name="hint_message">전보를 작성하세요.</string>
    <string name="send">전송</string>
    <string name="none_voice">음성파일이 없습니다.</string>
    <string name="auto_login">자동로그인</string>
    <string name="member_join_agree">이 약관에서 사용하는 용어는 다음과 같이 정의합니다.  ‘서비스’라 함은 구현되는 단말기(휴대전화 및 휴대단말기, PC, 스마트TV 등 각종 유무선 기기)와 상관없이 회원이 이용할 수 있는, 트래블 라디오가 제공하는 모든 서비스를 의미합니다. ‘회원’이라 함은 회사의 서비스에 접속하여 이 약관에 따라 트래블 라디오와 이용 계약을 체결하고 트래블 함은 텍스트, 이미지, 음성, 링크 등 회원이 올린 여행 게시물을 의미합니다. </string>
    <string name="app_id">406166192869754</string>

</resources>
