<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="20dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/member_join_eng"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/user_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editText2join_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/join_edittext"
            android:ems="10"
            android:hint="@string/member_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editText2join_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/join_edittext"
            android:ems="10"
            android:hint="@string/member_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editText4join_pwcheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/join_edittext"
            android:ems="10"
            android:hint="@string/member_password_check"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editText3join_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/join_edittext"
            android:ems="10"
            android:hint="@string/member_name"
            android:imeOptions="actionDone"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/member_location_agree"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_content"
            android:textSize="14sp" />

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="wrap_content"
            android:layout_height="70dp" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/member_join_agree"
                android:textColor="@color/text_content"
                android:textSize="10sp" />

        </ScrollView>

        <CheckBox
            android:id="@+id/checkBox1join_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/agree"
            android:textColor="@color/text_content"
            android:textSize="10sp" />

        <Button
            android:id="@+id/button1join_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_selector_login"
            android:text="@string/member_join_ok"
            android:textColor="@color/btn_over_color"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>