<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="20dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/login_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/user_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editText1login_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/login_email"
            android:ems="10"
            android:hint="@string/member_email"
            android:imeOptions="actionNext"
            android:paddingLeft="45dp"
            android:singleLine="true"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editText1login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/login_password"
            android:ems="10"
            android:hint="@string/member_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingLeft="45dp"
            android:textSize="12sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button1login_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:background="@drawable/btn_selector_login"
            android:text="@string/member_login"
            android:textColor="@color/btn_over_color"
            android:textSize="14sp" />
        
        <Button
            android:id="@+id/button_login_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_selector_login"
            android:text="페이스북 로그인"
            android:textColor="@color/btn_over_color"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        style="@style/TextViewBlank" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_user_join" />

        <TextView
            android:id="@+id/textView3pwsearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_user_password"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>