<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="20dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/password_search"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/user_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editText2join_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/join_edittext"
            android:ems="10"
            android:hint="@string/member_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editText3join_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/join_edittext"
            android:ems="10"
            android:hint="@string/member_name"
            android:imeOptions="actionDone"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button1password_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_selector_login"
            android:text="@string/button_search_password"
            android:textColor="@color/btn_over_color"
            android:textSize="14sp" />

    </LinearLayout>
    
     <TextView
        android:id="@+id/textView4"
        style="@style/TextViewBlank" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2rejoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_user_join_re"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>