<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="20dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/myinfo"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/user_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_stub" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:gravity="right" >

            <ImageView
                android:id="@+id/imageView1location_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/actionbar_location" />

            <TextView
                android:id="@+id/textView2location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/member_location"
                android:textColor="@color/text_content"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <!-- <EditText -->
        <!-- android:id="@+id/editText2join_email" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:layout_weight="1" -->
        <!-- android:background="@drawable/join_edittext" -->
        <!-- android:ems="10" -->
        <!-- android:hint="@string/member_email" -->
        <!-- android:imeOptions="actionNext" -->
        <!-- android:inputType="textEmailAddress" -->
        <!-- android:paddingLeft="10dp" -->
        <!-- android:focusable="false" -->
        <!-- android:singleLine="true" -->
        <!-- android:textSize="12sp" /> -->

        <EditText
            android:id="@+id/editText2join_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/join_edittext"
            android:ems="10"
            android:hint="@string/member_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editText4join_pwcheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/join_edittext"
            android:ems="10"
            android:hint="@string/member_password_check"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editText3join_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/join_edittext"
            android:ems="10"
            android:hint="@string/member_name"
            android:imeOptions="actionDone"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@color/text_content"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editText3join_mylocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/join_edittext"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/member_mylocation"
            android:imeOptions="actionDone"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@color/text_content"
            android:textSize="12sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button1modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_selector_login"
        android:text="@string/modify"
        android:textColor="@color/btn_over_color"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button1logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_selector_login"
        android:text="@string/button_logout"
        android:textColor="@color/btn_over_color"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView1"
        style="@style/TextViewBlank" />

    <TextView
        android:id="@+id/textView2getout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="탈퇴하기"
        android:textColor="@color/text_content2" />

</LinearLayout>