<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/FrameLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1none"
        style="@style/TextNone" />

    <FrameLayout
        android:id="@+id/frame_all"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" >

                <EditText
                    android:id="@+id/editText_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/record_back_search_bar"
                    android:ems="10"
                    android:hint="@string/record_search_hint"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/button_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_selector_search2"
                    android:minHeight="0dip"
                    android:minWidth="0dip"
                    android:textSize="12sp" />
            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/button2reply"
                    style="@style/ButtonVoiceBox"
                    android:text="@string/voice_reply" />

                <Button
                    android:id="@+id/button3delete"
                    style="@style/ButtonVoiceBox"
                    android:text="@string/voice_delete" />

                <Button
                    android:id="@+id/button4saved"
                    style="@style/ButtonVoiceBox"
                    android:text="@string/voice_saved" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ListView
                android:id="@+id/listView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp" >
            </ListView>
        </FrameLayout>

    </FrameLayout>

</FrameLayout>