<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView1block"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="차단하기"
                    android:textColor="@color/text_content2"
                    android:textSize="10sp" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageView2face"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_vertical|center"
                    android:layout_marginTop="20dp"
                    android:scaleType="center"
                    android:src="@drawable/ic_launcher" />
                <TextView
                    android:id="@+id/textView1username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="12sp"
                    android:textColor="@color/text_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp" >

                    <Button
                        android:id="@+id/button1voice_message"
                        style="@style/ButtonMybooth"
                        android:text="@string/voice" />

                    <Button
                        android:id="@+id/button2message"
                        style="@style/ButtonMybooth"
                        android:text="@string/message" />

                    <Button
                        android:id="@+id/button3following"
                        style="@style/ButtonMybooth"
                        android:text="@string/following" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <android.support.v4.app.FragmentTabHost
        android:id="@+id/tabhost_mybooth"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:divider="@null" >
                </TabWidget>
            </LinearLayout>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="0dp"
                android:layout_height="0dp" />

            <FrameLayout
                android:id="@+id/realtabcontent_mybooth"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </android.support.v4.app.FragmentTabHost>

</LinearLayout>